# analyse-acoustique-texte-alice

./: .gitignore  README.md  ReadMe.md  install.sh  pyproject.toml  script.sh  texte_entier.txt  uninstall.sh
3_alignement_force/: JP_1.TextGrid  JP_1.csv
4_qualite_vocale/: Measures_sent1.txt
5_consonnes/result/: 2026-05-20 14:04:40.952357.txt  spectralmoments_python.txt
5_consonnes/txt/: JP_1.txt  JP_1_diverg.TextGrid  JP_1_diverg.txt
6_voyelles/: input.csv  voweltriangle_praat.txt
7_semi_consonnes/result/: JP_1.csv
Analyzed_results/: mesures_acoustiques_consonnes.csv  mesures_acoustiques_semivoyelles.csv
Scripts/: 10_VowelTriangle.praat  10_VowelTriangle.praat.origin  11_formantTrans_glides.praat  12_prosodic_formant.py  4_textgrid_to_table.praat  5_extract_consonants_from_textgridtable.py  6_qualite_vocale.praat  7_lancer_diverg  8_txt2textgrid.py  9_spectral_moments.py  BAUS_to_Paty.py  diverg.original.py  diverg.py  main.py  printfirstline.praat  script_spectral_moments_python.praat  spectral_moments.py  textgrid_to_table.py  traitement_textgrid.py
Scripts/analysis/: Frame.py  Segment.py  SegmentType.py  mesures_acoustiques.py  mesures_acoustiques_consonnes.py  mesures_acoustiques_semivoyelles.py
