[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "praat-parselmouth>=0.4.7",
    "setuptools>=82.0.1",
    "silero-vad>=6.2.1",
    "webrtcvad>=2.0.10",
    "wheel>=0.47.0",
]
