[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "silero-vad",
    "pandas>=3.0.3",
    "librosa>=0.11.0",
    "numpy>=1.26,<2",
    "praat-parselmouth>=0.4.7",
    "matplotlib>=3.10.9",
    "pydub>=0.25.1",
    "tgt>=1.5",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
